# gysela-mini-app_poisson

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cpu_tests.yml  static_analyses.yml
simulations/: CMakeLists.txt  gys_poisson.cpp  params.yaml.hpp
src/: CMakeLists.txt
src/poisson/: CMakeLists.txt  poisson_init.cpp  poisson_init.hpp
src/test_cases/: CMakeLists.txt  cartesian_solution.hpp  curvilinear_solution.hpp  i_solution.hpp  rhs.hpp  rhs_cartesian_solution_circular_mapping.cpp  rhs_cartesian_solution_czarny_mapping.cpp  rhs_curvilinear_solution_circular_mapping.cpp  rhs_curvilinear_solution_czarny_mapping.cpp
